--- a/THANKS
+++ b/THANKS
@@ -17,6 +17,7 @@ support in Gnuastro. The list is ordered alphabetically.
 
     Karl Berry                           karl@gnu.org
     Roland Bacon                         roland.bacon@univ-lyon1.fr
+    Nicolas Bouché                       nicolas.bouche@irap.omp.eu
     Antonio Diaz Diaz                    antonio@gnu.org
     Takashi Ichikawa                     ichikawa@astr.tohoku.ac.jp
     Brandon Invergo                      brandon@gnu.org
@@ -31,10 +32,7 @@ support in Gnuastro. The list is ordered alphabetically.
 Institutions
 ------------
 
-GNU Astronomy Utilities (Gnuastro) has greatly benefited from the following
-institutions. These institutions have either funded, supported and most
-importantly provided a productive environment for the developers of
-Gnuastro. The list is in chronological order.
+Host institutions of Gnuastro's developers.
 
     Ministry of education, culture, sports, science and technology, Japan.
     Tohoku University, Sendai, Japan.
