Operators treated as macros, not string
The different operators are now recorgnized as macros in
`gal_data_arithmetic'. Until now, they were treated as strings which made
it a little slow and hard to generalize.

Also the `!=' operator is now called `ne' in Arithmetic, until now it was
called `neq'. This follows the names of the comparison operators in the
shell.

--- a/doc/gnuastro.texi
+++ b/doc/gnuastro.texi
@@ -7183,7 +7183,7 @@ Equality: similar to @code{lt} (`less than' operator), but returning 1 when
 the two popped operands are equal (to double precision floating point
 accuracy).
 
-@item neq
+@item ne
 Non-Equality: similar to @code{lt} (`less than' operator), but returning 1
 when the two popped operands are @emph{not} equal (to double precision
 floating point accuracy).
