All binary operator types set at configure time
Until now the default binary operator types were treated differently from
the non-default types. But now, they are treated exactly the same as the
non-default types. This allows greater generality and also makes the
programming easier, since no type is different from the others.

The options specifying the native binary operator types are also now
described in the manual.

--- a/doc/gnuastro.texi
+++ b/doc/gnuastro.texi
@@ -3127,6 +3127,55 @@ Do not build or install the program named @file{progname}. This is
 very similar to the @option{--enable-progname}, but will build and
 install all the other programs except this one.
 
+@item --enable-bin-op-uchar
+@itemx --enable-bin-op-char
+@itemx --enable-bin-op-ushort
+@itemx --enable-bin-op-short
+@itemx --enable-bin-op-uint
+@itemx --enable-bin-op-int
+@itemx --enable-bin-op-ulong
+@itemx --enable-bin-op-long
+@itemx --enable-bin-op-longlong
+@itemx --enable-bin-op-float
+@itemx --enable-bin-op-double
+Enable the binary data-structure operators to work natively on the
+respective type of data (@option{u} stands for unsigned types). Some types
+are compiled by default, to disable them (or disable any other type),
+either run @option{enable-bin-op-TYPE=no}, or run
+@option{--disable-bin-op-TYPE}. You can tell which types are acceptable by
+default by inspecting the messages of @command{./configure}.
+
+Binary operators are some of the most common operators to the
+@ref{Arithmetic} program or the @code{gal_data_arithmetic} function in
+@ref{Gnuastro library}. To operate most efficiently (as fast as possible
+without using too much of the system resources like memory or CPU), it is
+best to rely on the native types of the input data. For example, if you
+want to add an integer array with a floating point array, using the native
+types, means using the C language's internal type conversion. If we don't
+use the native conversion, then the integer array has to be converted to
+the same type as the floating point array to do the conversion. This will
+consume memory and CPU resources and ultimately slow down the running.
+
+There are many binary operators and in order to have them operate natively
+on of each of the above types, the compiler has to prepare for many
+different conditions. This can greatly slow down the
+compilation@footnote{It can also greatly increase the file size of the
+library, from a few hundred kilobytes to a few megabytes} (when you run
+@command{make}). For example, with only one type, compilation will take
+less than a minute, but if you enable all types, it can take upto an hour
+or more depending on your computer. However, this time that is invested
+once at compilation time will result in great profits each time you run
+Gnuastro programs or libraries, because no internal type conversion will be
+necessary.
+
+Therefore, if you commonly work with very specific data-types, you can add
+them (and remove the default ones you don't need them) with these options
+to speed up your work. Alternatively, GNU/Linux distribution package
+managers who compile once (for all the users who just download the compiled
+programs and executables), can enable all types to help their users.
+
+
+
 @item --enable-gnulibcheck
 @cindex GNU C library
 @cindex Gnulib: GNU Portability Library
